syntax = "proto3";
package proto;
option go_package = "orchestrator/proto";
message ScrapRequest {
    string Title = 1;
    int64 Page = 2;
    int64 Quantity = 3;
}

message ScrapPerChapterRequest {
    string Title = 1;
    string Id = 2;
}

message ScrapResponse {
    Comic Comic = 1;
}

message Comic {
    ComicFlat ComicFlat = 1;
    repeated Chapter Chapters = 2;
}
message ComicFlat {
        int64 Id = 1;
        string Name = 2;
        string Host = 3;
}

message Chapter {
    ChapterFlat ChapterFlat = 1;
    repeated ImageProvider Images = 2;
}

message ChapterFlat {
        string Id = 1;
}

message ImageProvider {
    int64 Episode = 1;
    string Provider = 2;
    string Link = 3;
}

message ScrapPerChapterResponse {
    Chapter Chapter = 1;
}


service Scrapper {
    rpc Scrap(ScrapRequest) returns (ScrapResponse) {}
    rpc ScrapPerChapter(ScrapPerChapterRequest) returns (ScrapPerChapterResponse) {}
}
